Fix sidecard (needs to be inside sidebar content to collapse)

--- a/css/colormag.less
+++ b/css/colormag.less
@@ -2295,12 +2295,8 @@ body.socket-flip #colormag__colophon .footer-socket-right-section {
     order: 2;
 }
 
-#colormag__sidecard-wrap {
-    /* compensate sidebar top-padding that is needed with text content but isn't as nice with sidecard */
-}
-
 [dir] #colormag__sidecard-wrap {
-    margin-top: -.5rem;
+    text-align: center;
 }
 
 #colormag__sidecard-wrap img {
