--- a/css/src/colormag.less
+++ b/css/src/colormag.less
@@ -1781,8 +1781,7 @@ body.socket-flip #colormag__colophon .footer-socket-right-section {
 }
 
 #colormag__sidecard-wrap {
-    /* compensate sidebar top-padding that is needed with text content but isn't as nice with sidecard */
-    margin-top: -.5rem;
+    text-align: center;
 }
 
 #colormag__sidecard-wrap img {
